remove recipie from path of href

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1> THIS IS ODIN PROJECT RECIPE</h1>
-<a href="recipes/momo.html">The Only Way to make Mo:Mo</a>
+<a href="momo.html">The Only Way to make Mo:Mo</a>
 </body>
 </html>
